# mx-scraper

./: .gitignore  CHANGES.md  Cargo.toml  Jenkinsfile  LICENSE  README.md  TODO.md  auto-build.js  mx-config.yaml  mx-scraper.cmd  package-lock.json  package.json  release.js  run-example.cmd  sample-meta.json  sample.yaml  sandbox-run.cmd  tsconfig.json
.github/workflows/: auto-build.yml  mx-scraper.yml  test.yml  tests.yml
capture-ext/: background.js  index.html  index.js  manifest.json
dev/: compile.cmd  mx-scraper.cmd  sandbox.cmd  test.cmd  update.cmd
misc-extensions/cloudflare-worker-proxy/: worker.js
misc-extensions/mx-scraper-context-sender/: index.js
plugins/: plugin.py
plugins/batoto/: __init__.py  utils.py
plugins/example/: __init__.py
plugins/images/: __init__.py  utils.py
sandbox/: download.ts  html_parser.ts  mx_cli_arg_parse.ts  parallel_promises.ts  query_plan_raw.ts
src/: MXScraper.ts  cli.ts  config.json  environment .ts  environment.ts  import_map.json  index.ts  main.rs  main.ts  mx_configuration.ts
src/cli/: CLIEngine.ts  DynamicConfigurer.ts  MXCommand.ts  MXLogger.ts  MXcli.ts  cli_engine.ts  dynamic_configurer.ts  fetch.rs  infos.rs  mod.rs  mx_cli.ts  mx_command.ts  mx_logger.ts  server.rs
src/core/: BookDef.ts  MXPlugin.ts  MXScraper.ts  QueryPlan.ts  QueryPlanner.ts  book.ts  downloader.rs  http.rs  mod.rs  mx_plugin.ts  mx_scraper.ts  query_plan.ts  utils.rs
src/core/http/: basic.rs  (+3 more)
src/interfaces/: BookDef.ts  MXPlugin.ts  Tag.ts
src/plugins/: EHentai.ts  Example.ts  Eyval.ts  GPrincess.ts  HentaiKage.ts  Kemono.ts  NHentai.ts  gallery_dl.rs  mod.rs  python.rs  rule34comic.ts  static_load.ts
src/sandbox/: cli-experiments.ts  cubari-experiments.ts  down-test.ts  fetch.ts  flare-session.ts  hash.ts  headless-experiments.ts  html-parser-experiments.ts  jsdom-experiments.ts  loading.ts  mx-cli-experiments.ts  nh-experiments.ts  parallel-promises.ts  query-planner.ts  request.ts  test-batch.ts  test-url.ts  uri-experiments.ts
src/schemas/: book.rs  config.rs  cookies.rs  mod.rs
src/tests/: cli.test.ts  flare-client.test.ts  gallery_dl.rs  headless.test.ts  mod.rs  old_book.json  parser.rs  plugin.test.ts  request.test.ts  test.test.ts  utils.test.ts
src/utils/: CustomAST.ts  CustomRequest.ts  Downloader.ts  FlareSolverrClient.ts  HeadlessBrowser.ts  HtmlParser.ts  UniqueHeadlessBrowser.ts  Utils.ts  custom_ast.ts  custom_request.ts  downloader.ts  environement.ts  environment .ts  flaresolverr_client.ts  html_parser.ts
tests/core/: ast_node_test.ts  cli_test.ts  html_parser_test.ts  plugin_test.ts
(+57 files in other folders)
