[package]
name = "mx-scraper"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.86"
async-std = "1.12.0"
base64 = "0.22.1"
clap = { version = "4.5.14", features = ["derive"] }
futures = "0.3.30"
indexmap = "2.3.0"
indicatif = "0.17.8"
lazy_static = "1.5.0"
pyo3 = { version = "0.22.2", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde-pyobject = "0.4.0"
serde_json = "1.0.122"
serde_yaml = "0.9.34"
tokio = { version = "1.39.2", features = ["full"] }
url = "2.5.2"
